# asyncv

./: .gitignore  Cargo.toml  README.md  biome.json  package.json
crates/asyncv_service/: Cargo.toml  dev.env
crates/asyncv_service/src/: agent.rs  bot.rs  main.rs
crates/asyncv_service/src/entity/: agent.rs  language_model_config.rs  mod.rs  prelude.rs
docs/: DEVELOPMENT_PLAN.md
